prevent kendo to wrap up cell content on white space

--- a/Harness/Kendo/KendoHarnessStyleSheet.css
+++ b/Harness/Kendo/KendoHarnessStyleSheet.css
@@ -2,7 +2,6 @@
         .k-numerictextbox .k-input {
             text-align: right;
         }
-        
-        /*.k-grid .k-alt {
-            background: aliceblue;
-        }*/
+         .k-grid td{
+            white-space: nowrap;
+         }
